--- a/pigDice.html
+++ b/pigDice.html
@@ -2,16 +2,15 @@
 <html>
 
 <head>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <meta charset="utf-8" <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 
-  <title>pigDice</title>
+  <title>pigDice!</title>
 </head>
 
 <body>
   <div class="container">
     <h1>pigDice</h1>
-
   </div>
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/scripts.js"></script>
