more images added

--- a/pigDice.html
+++ b/pigDice.html
@@ -13,7 +13,8 @@
     <h1>PIG DICE games!</h1>
     <div class="row">
       <div class="col-md-6">
-        <images src="images/player1.html" alt="player 1" <p>player1</p>
+        <images src="images/johnnyb.jpeg" alt="player 1" <p>player1</p>
+
       </div>
       <div class="col-md-6">
         <images src="images/player2.html" alt="player 2" <p>player2</p>
@@ -27,6 +28,8 @@
           <li>if you roll a 1 ,it is the next players turn</li>
         </ul>
       </div>
+      <button type="button" onclick="button">Start</button>
+      <button type="button" onclick="button">Points</button>
       <script src="js/jquery-3.3.1.js"></script>
       <script src="js/scripts.js"></script>
 </body>
