--- a/pigDice.html
+++ b/pigDice.html
@@ -12,12 +12,12 @@
   <div class="container">
     <h1>PIG DICE games!</h1>
     <div class="row">
-      <div class="col-md-6">
+      <div class="player1">
         <images src="images/johnnyb.jpeg" alt="player 1" <p>player1</p>
 
       </div>
-      <div class="col-md-6">
-        <images src="images/player2.html" alt="player 2" <p>player2</p>
+      <div class="player2">
+        <images src="images/bobsburgers.jpg" alt="player 2" <p>player2</p>
       </div>
 
       <div class="container">
