--- a/pigDice.html
+++ b/pigDice.html
@@ -9,29 +9,87 @@
 </head>
 
 <body>
+
+
+  <div class="container-fluid">
+    <div class="jumbotron">id="imageSlider">
+      <p id>PIG DICE GAMES!</p>
+    </div>
+    <h1> the first to score<strong>100</strong></h1>
+  </div>
   <div class="container">
-    <h1>PIG DICE games!</h1>
-    <div class="row">
-      <div class="player1">
-        <images src="images/johnnyb.jpeg" alt="player 1" <p>player1</p>
+    <div class="col-md-3">id="white">
+      </br>
+      </br>
+      </br>
+      <a href="https://github.com/kanyiangela/pigDice.git" id="new">NEW GAME</a>
+      </br>
+      <br/>
+      <br/>
 
-      </div>
-      <div class="player2">
-        <images src="images/bobsburgers.jpg" alt="player 2" <p>player2</p>
-      </div>
+      </br/>
+      <h1>PLAYER 1</h1>
+      </br>
+      </br>
+      </br>
+      </br>
+      <br/>
+      </br>
+      </br/>
 
-      <div class="container">
-        <h2>WELCOME TO PIG DICE</h2>
-        <p>RULES:</p>
-        <ul>
-          <li>the winner scores 100 points </li>
-          <li>if you roll a 1 ,it is the next players turn</li>
-        </ul>
-      </div>
-      <button type="button" onclick="button">Start</button>
-      <button type="button" onclick="button">Points</button>
-      <script src="js/jquery-3.3.1.js"></script>
-      <script src="js/scripts.js"></script>
+      <p><strong>PLAYER'S SCORE:</strong></p>
+
+      </br>
+      </br>
+      </br>
+      </br>
+      <br/>
+      </br>
+      </br/>
+      </br>
+      </br>
+      <form>
+        <button type="submit" class="btn btn-primary" id="roll">ROLL DICE!</button>
+      </form>
+
+    </div>
+    <div class="col-md-3" id="blue">
+      </br>
+      </br>
+      </br>
+      <br/>
+      <br/>
+      </br>
+
+      <h1>PLAYER 2</h1>
+      </br>
+      </br>
+      </br>
+      </br>
+      <br/>
+      </br>
+      </br/>
+
+
+      <p><strong>PLAYER'S SCORE:</strong></p>
+
+      </br>
+      </br>
+      </br>
+      </br>
+      <br/>
+      </br>
+      </br/>
+      </br/>
+      </br/>
+      <form>
+        <button type="submit" class="btn btn-primary" id="roll" onclick="document.write(rand)">ROLL DICE!</button>
+      </form>
+    </div>
+  </div>
+
+  <script src="js/jquery-3.3.1.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
